--- a/deployments/docker-compose/compose.yaml
+++ b/deployments/docker-compose/compose.yaml
@@ -11,17 +11,20 @@ services:
             MONGO_INITDB_ROOT_USERNAME: ${AMBULANCE_API_MONGODB_USERNAME}
             MONGO_INITDB_ROOT_PASSWORD: ${AMBULANCE_API_MONGODB_PASSWORD}
     mongo_express:
-        image: mongo-express:1.0.0-alpha
+#        image: mendhak/http-https-echo
+        image: mongo-express
         container_name: mongo_express
         restart: always
         ports:
+#        - 8081:8080
         - 8081:8081
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME:  ${AMBULANCE_API_MONGODB_USERNAME}
             ME_CONFIG_MONGODB_ADMINPASSWORD: ${AMBULANCE_API_MONGODB_PASSWORD}
             ME_CONFIG_MONGODB_SERVER: mongo
-            # ME_CONFIG_BASICAUTH_USERNAME: ''
-            # ME_CONFIG_BASICAUTH_PASSWORD: ''
+#            ME_CONFIG_MONGODB_URL: mongodb://root:neUhaDnes@mongo:27017/
+            ME_CONFIG_BASICAUTH_USERNAME: 'meme'
+            ME_CONFIG_BASICAUTH_PASSWORD: 'meme'
         depends_on:
         - mongo
         # links:
