--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Get Go version from go.mod
+      id: get_go_version
+      run: echo "go_version=$(grep -m1 'go ' go.mod | awk '{print $2}')" >> $GITHUB_OUTPUT
+   
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: ${{ steps.get_go_version.outputs.go_version }}
+        
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
